SF Primes/src/objects/Employee_Information__c.object
<CustomObject>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hayes-Ligon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LeaseStar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LightSpeed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National/Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Current_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if you want the current text/subject to be sent to the users phone</inlineHelpText>
        <label>Send Current Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spouse__c</fullName>
        <label>Spouse</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Wireless Card</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Del__c</fullName>
        <description>Delete the field later. Replace with a formula field.</description>
        <label>Status_Del</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF((User__r.IsActive = FALSE || CONTAINS( LOWER(User__r.LastName), &quot;retire&quot;)) &amp;&amp; User__r.Inactive_Due_to_Inactivity__c = FALSE, &quot;Inactive&quot;, &quot;Active&quot;)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_1__c</fullName>
        <label>Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Text_Message_Body__c</fullName>
        <inlineHelpText>Actual body of the text message to be sent out to rep (limit 255 characters)</inlineHelpText>
        <label>Text Message Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text_Message_Subject__c</fullName>
        <inlineHelpText>Actual subject value to appear for the text message once sent</inlineHelpText>
        <label>Text Message Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>User__r.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Clubs__c</fullName>
        <label>Total # Clubs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Record</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only Active Users can be linked!</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Employee_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_ID__c</fullName>
        <label>Vendor ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work__c</fullName>
        <label>Work</label>
        <type>Phone</type>
    </fields>
    <label>Employee Information</label>
    <listViews>
        <fullName>Active_Employees_Missing_User_Link</fullName>
        <columns>NAME</columns>
        <columns>Status_Del__c</columns>
        <columns>Department__c</columns>
        <columns>User__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Manager__c</columns>
        <columns>Mobile__c</columns>
        <columns>Termination_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_Del__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
        </filters>
        <label>Active Employees Missing User Link</label>
    </listViews>
    <listViews>
        <fullName>Active_Employees_Non_Chatter_Users</fullName>
        <columns>NAME</columns>
        <columns>Status_Del__c</columns>
        <columns>Title__c</columns>
        <columns>Department__c</columns>
        <columns>Manager__c</columns>
        <columns>Mobile__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Release_Element_Sheet__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_Del__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Chatter_Plus_License_Only__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Active Employees Non-Chatter Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Employees</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Department__c</columns>
        <columns>Manager__c</columns>
        <columns>Mobile__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Title__c</columns>
        <columns>License_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Employees</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BDC_Employees</fullName>
        <columns>NAME</columns>
        <columns>Status_Del__c</columns>
        <columns>Department__c</columns>
        <columns>Manager__c</columns>
        <columns>Mobile__c</columns>
        <columns>Termination_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>BDC Employees</label>
    </listViews>
    <listViews>
        <fullName>Cost_Center_Employees</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Manager__c</columns>
        <columns>Mobile__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Cost_Center_Number__c</columns>
        <columns>License_Status__c</columns>
        <columns>License_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cost_Center_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Cost Center Employees</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Created_Last_Week</fullName>
        <columns>NAME</columns>
        <columns>Status_Del__c</columns>
        <columns>Title__c</columns>
        <columns>Department__c</columns>
        <columns>Manager__c</columns>
        <columns>Mobile__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Release_Element_Sheet__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <filters>
            <field>Chatter_Plus_License_Only__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Created Last Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DSM_or_DOS</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Postal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Title__c</field>
            <operation>contains</operation>
            <value>DOS,DSM</value>
        </filters>
        <label>DSM or DOS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Enterprise_Employees</fullName>
        <columns>NAME</columns>
        <columns>Status_Del__c</columns>
        <columns>Department__c</columns>
        <columns>Manager__c</columns>
        <columns>Mobile__c</columns>
        <columns>Termination_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HR_Manager__c</field>
            <operation>contains</operation>
            <value>Carson</value>
        </filters>
        <label>Enterprise Employees</label>
    </listViews>
    <listViews>
        <fullName>InActive_Employees</fullName>
        <columns>NAME</columns>
        <columns>Status_Del__c</columns>
        <columns>Department__c</columns>
        <columns>Manager__c</columns>
        <columns>Mobile__c</columns>
        <columns>Termination_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_Del__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>InActive Employees</label>
    </listViews>
    <listViews>
        <fullName>New_Employee_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Status_Del__c</columns>
        <columns>Department__c</columns>
        <columns>Manager__c</columns>
        <columns>Address__c</columns>
        <columns>Mobile__c</columns>
        <columns>Termination_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New Employee This Week</label>
    </listViews>
    <listViews>
        <fullName>Sprint_Phone_Users</fullName>
        <columns>NAME</columns>
        <columns>Status_Del__c</columns>
        <columns>Department__c</columns>
        <columns>Manager__c</columns>
        <columns>Address__c</columns>
        <columns>Mobile__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Ph_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ph_Email__c</field>
            <operation>contains</operation>
            <value>sprintpcs</value>
        </filters>
        <label>Sprint Phone Users</label>
    </listViews>
    <nameField>
        <label>Employee</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Information</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ADPS_Acclivus_Negotiations</fullName>
        <active>true</active>
        <description>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</description>
        <errorConditionFormula>OR(
   	AND( OR(ISPICKVAL( ADPS_AN_Acclivus_Negotiations__c , &quot;&quot;), ISPICKVAL( ADPS_AN_Acclivus_Negotiations__c , &quot;Not Assigned&quot;)), OR(NOT(ISBLANK( ADPS_AN_Assigned_Date__c )), NOT(ISBLANK( ADPS_AN_Completed_Date__c )))),
   	AND(ISPICKVAL( ADPS_AN_Acclivus_Negotiations__c , &quot;Assigned&quot;), OR(ISBLANK( ADPS_AN_Assigned_Date__c ), NOT(ISBLANK( ADPS_AN_Completed_Date__c )))),
   	AND(ISPICKVAL( ADPS_AN_Acclivus_Negotiations__c , &quot;Completed&quot;), ISBLANK( ADPS_AN_Assigned_Date__c ), ISBLANK( ADPS_AN_Completed_Date__c )),
   	AND(ISPICKVAL( ADPS_AN_Acclivus_Negotiations__c , &quot;Completed&quot;), OR(ISBLANK( ADPS_AN_Completed_Date__c ), ADPS_AN_Completed_Date__c &lt; ADPS_AN_Assigned_Date__c))
  )</errorConditionFormula>
        <errorDisplayField>ADPS_AN_Acclivus_Negotiations__c</errorDisplayField>
        <errorMessage>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADPS_DOS_Leadership_TOP10_Mantras</fullName>
        <active>true</active>
        <description>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</description>
        <errorConditionFormula>OR(
   	AND( OR(ISPICKVAL( ADPS_DL_DOS_Leadership_TOP10_Mantras__c , &quot;&quot;), ISPICKVAL( ADPS_DL_DOS_Leadership_TOP10_Mantras__c , &quot;Not Assigned&quot;)), OR(NOT(ISBLANK( ADPS_DL_Assigned_Date__c )), NOT(ISBLANK( ADPS_DL_Completed_Date__c )))),
   	AND(ISPICKVAL( ADPS_DL_DOS_Leadership_TOP10_Mantras__c , &quot;Assigned&quot;), OR(ISBLANK( ADPS_DL_Assigned_Date__c ), NOT(ISBLANK( ADPS_DL_Completed_Date__c )))),
   	AND(ISPICKVAL( ADPS_DL_DOS_Leadership_TOP10_Mantras__c , &quot;Completed&quot;), ISBLANK( ADPS_DL_Assigned_Date__c ), ISBLANK( ADPS_DL_Completed_Date__c )),
   	AND(ISPICKVAL( ADPS_DL_DOS_Leadership_TOP10_Mantras__c , &quot;Completed&quot;), OR(ISBLANK( ADPS_DL_Completed_Date__c ), ADPS_DL_Completed_Date__c &lt; ADPS_DL_Assigned_Date__c))
  )</errorConditionFormula>
        <errorDisplayField>ADPS_DL_DOS_Leadership_TOP10_Mantras__c</errorDisplayField>
        <errorMessage>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADPS_New_Hire</fullName>
        <active>true</active>
        <description>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</description>
        <errorConditionFormula>OR(
   	AND( OR(ISPICKVAL( ADPS_NH_New_Hire__c , &quot;&quot;), ISPICKVAL( ADPS_NH_New_Hire__c , &quot;Not Assigned&quot;)), OR(NOT(ISBLANK( ADPS_NH_Assigned_Date__c )), NOT(ISBLANK( ADPS_NH_Completed_Date__c )))),
   	AND(ISPICKVAL( ADPS_NH_New_Hire__c , &quot;Assigned&quot;), OR(ISBLANK( ADPS_NH_Assigned_Date__c ), NOT(ISBLANK( ADPS_NH_Completed_Date__c )))),
   	AND(ISPICKVAL( ADPS_NH_New_Hire__c , &quot;Completed&quot;), ISBLANK( ADPS_NH_Assigned_Date__c ), ISBLANK( ADPS_NH_Completed_Date__c )),
   	AND(ISPICKVAL( ADPS_NH_New_Hire__c , &quot;Completed&quot;), OR(ISBLANK( ADPS_NH_Completed_Date__c ), ADPS_NH_Completed_Date__c &lt; ADPS_NH_Assigned_Date__c))
  )</errorConditionFormula>
        <errorDisplayField>ADPS_NH_New_Hire__c</errorDisplayField>
        <errorMessage>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADPS_New_Hire_Drivers_Ed</fullName>
        <active>true</active>
        <description>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</description>
        <errorConditionFormula>OR(
   	AND( OR(ISPICKVAL( ADPS_DE_New_Hire_Drivers_Ed__c , &quot;&quot;), ISPICKVAL( ADPS_DE_New_Hire_Drivers_Ed__c , &quot;Not Assigned&quot;)), OR(NOT(ISBLANK( ADPS_DE_Assigned_Date__c )), NOT(ISBLANK( ADPS_DE_Completed_Date__c )))),
   	AND(ISPICKVAL( ADPS_DE_New_Hire_Drivers_Ed__c , &quot;Assigned&quot;), OR(ISBLANK( ADPS_DE_Assigned_Date__c ), NOT(ISBLANK( ADPS_DE_Completed_Date__c )))),
   	AND(ISPICKVAL( ADPS_DE_New_Hire_Drivers_Ed__c , &quot;Completed&quot;), ISBLANK( ADPS_DE_Assigned_Date__c ), ISBLANK( ADPS_DE_Completed_Date__c )),
   	AND(ISPICKVAL( ADPS_DE_New_Hire_Drivers_Ed__c , &quot;Completed&quot;), OR(ISBLANK( ADPS_DE_Completed_Date__c ), DISS_HO_Q2_Completed_Date__c &lt; ADPS_DE_Assigned_Date__c))
  )</errorConditionFormula>
        <errorDisplayField>ADPS_DE_New_Hire_Drivers_Ed__c</errorDisplayField>
        <errorMessage>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DESS_ADP_Menu</fullName>
        <active>true</active>
        <description>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</description>
        <errorConditionFormula>OR(
   	AND( OR(ISPICKVAL( DESS_AM_ADP_Menu__c , &quot;&quot;), ISPICKVAL( DESS_AM_ADP_Menu__c , &quot;Not Assigned&quot;)), OR(NOT(ISBLANK( DESS_AM_Assigned_Date__c )), NOT(ISBLANK( DESS_AM_Completed_Date__c )))),
   	AND(ISPICKVAL( DESS_AM_ADP_Menu__c , &quot;Assigned&quot;), OR(ISBLANK( DESS_AM_Assigned_Date__c ), NOT(ISBLANK( DESS_AM_Completed_Date__c )))),
   	AND(ISPICKVAL( DESS_AM_ADP_Menu__c , &quot;Completed&quot;), ISBLANK( DESS_AM_Assigned_Date__c ), ISBLANK( DESS_AM_Completed_Date__c )),
   	AND(ISPICKVAL( DESS_AM_ADP_Menu__c , &quot;Completed&quot;), OR(ISBLANK( DESS_AM_Completed_Date__c ), DESS_AM_Completed_Date__c &lt; DESS_AM_Assigned_Date__c))
  )</errorConditionFormula>
        <errorDisplayField>DESS_AM_ADP_Menu__c</errorDisplayField>
        <errorMessage>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DESS_ADP_Telephony_in_the_Cloud_ATC</fullName>
        <active>true</active>
        <description>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</description>
        <errorConditionFormula>OR(
 	AND( OR(ISPICKVAL( DESS_AT_ADP_Telephony_in_the_Cloud_ATC__c , &quot;&quot;), ISPICKVAL( DESS_AT_ADP_Telephony_in_the_Cloud_ATC__c , &quot;Not Assigned&quot;)), OR(NOT(ISBLANK( DESS_AT_Assigned_Date__c )), NOT(ISBLANK( DESS_AT_Completed_Date__c )))),
 	AND(ISPICKVAL( DESS_AT_ADP_Telephony_in_the_Cloud_ATC__c , &quot;Assigned&quot;), OR(ISBLANK( DESS_AT_Assigned_Date__c ), NOT(ISBLANK( DESS_AT_Completed_Date__c )))),
 	AND(ISPICKVAL( DESS_AT_ADP_Telephony_in_the_Cloud_ATC__c , &quot;Completed&quot;), ISBLANK( DESS_AT_Assigned_Date__c ), ISBLANK( DESS_AT_Completed_Date__c )),
 	AND(ISPICKVAL( DESS_AT_ADP_Telephony_in_the_Cloud_ATC__c , &quot;Completed&quot;), OR(ISBLANK( DESS_AT_Completed_Date__c ), DESS_AT_Completed_Date__c &lt; DESS_AT_Assigned_Date__c))
  )</errorConditionFormula>
        <errorDisplayField>DESS_AT_ADP_Telephony_in_the_Cloud_ATC__c</errorDisplayField>
        <errorMessage>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DESS_Deal_Flow</fullName>
        <active>true</active>
        <description>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</description>
        <errorConditionFormula>OR(
 	AND( OR(ISPICKVAL( DESS_DF_Deal_Flow__c , &quot;&quot;), ISPICKVAL( DESS_DF_Deal_Flow__c , &quot;Not Assigned&quot;)), OR(NOT(ISBLANK( DESS_DF_Assigned_Date__c )), NOT(ISBLANK( DESS_DF_Completed_Date__c )))),
 	AND(ISPICKVAL( DESS_DF_Deal_Flow__c , &quot;Assigned&quot;), OR(ISBLANK( DESS_DF_Assigned_Date__c ), NOT(ISBLANK( DESS_DF_Completed_Date__c )))),
 	AND(ISPICKVAL( DESS_DF_Deal_Flow__c , &quot;Completed&quot;), ISBLANK( DESS_DF_Assigned_Date__c ), ISBLANK( DESS_DF_Completed_Date__c )),
 	AND(ISPICKVAL( DESS_DF_Deal_Flow__c , &quot;Completed&quot;), OR(ISBLANK( DESS_DF_Completed_Date__c ), DESS_DF_Completed_Date__c &lt; DESS_DF_Assigned_Date__c))
  )</errorConditionFormula>
        <errorDisplayField>DESS_DF_Deal_Flow__c</errorDisplayField>
        <errorMessage>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DESS_Drive</fullName>
        <active>true</active>
        <description>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</description>
        <errorConditionFormula>OR(
   	AND( OR(ISPICKVAL( DESS_DR_Drive__c , &quot;&quot;), ISPICKVAL( DESS_DR_Drive__c , &quot;Not Assigned&quot;)), OR(NOT(ISBLANK( DESS_DR_Assigned_Date__c )), NOT(ISBLANK( DESS_DR_Completed_Date__c )))),
   	AND(ISPICKVAL( DESS_DR_Drive__c , &quot;Assigned&quot;), OR(ISBLANK( DESS_DR_Assigned_Date__c ), NOT(ISBLANK( DESS_DR_Completed_Date__c )))),
   	AND(ISPICKVAL( DESS_DR_Drive__c , &quot;Completed&quot;), ISBLANK( DESS_DR_Assigned_Date__c ), ISBLANK( DESS_DR_Completed_Date__c )),
   	AND(ISPICKVAL( DESS_DR_Drive__c , &quot;Completed&quot;), OR(ISBLANK( DESS_DR_Completed_Date__c ), DESS_DR_Completed_Date__c &lt; DESS_DR_Assigned_Date__c))
  )</errorConditionFormula>
        <errorDisplayField>DESS_DR_Drive__c</errorDisplayField>
        <errorMessage>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DESS_Front_Office_Edge</fullName>
        <active>true</active>
        <description>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</description>
        <errorConditionFormula>OR(
   	AND( OR(ISPICKVAL( DESS_FO_Front_Office_Edge__c , &quot;&quot;), ISPICKVAL( DESS_FO_Front_Office_Edge__c , &quot;Not Assigned&quot;)), OR(NOT(ISBLANK( DESS_FO_Assigned_Date__c )), NOT(ISBLANK( DESS_FO_Completed_Date__c )))),
   	AND(ISPICKVAL( DESS_FO_Front_Office_Edge__c , &quot;Assigned&quot;), OR(ISBLANK( DESS_FO_Assigned_Date__c ), NOT(ISBLANK( DESS_FO_Completed_Date__c )))),
   	AND(ISPICKVAL( DESS_FO_Front_Office_Edge__c , &quot;Completed&quot;), ISBLANK( DESS_FO_Assigned_Date__c ), ISBLANK( DESS_FO_Completed_Date__c )),
   	AND(ISPICKVAL( DESS_FO_Front_Office_Edge__c , &quot;Completed&quot;), OR(ISBLANK( DESS_FO_Completed_Date__c ), DESS_FO_Completed_Date__c &lt; DESS_FO_Assigned_Date__c))
  )</errorConditionFormula>
        <errorDisplayField>DESS_FO_Front_Office_Edge__c</errorDisplayField>
        <errorMessage>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DESS_IPNS</fullName>
        <active>true</active>
        <description>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</description>
        <errorConditionFormula>OR(
	AND( OR(ISPICKVAL( DESS_IP_IPNS__c , &quot;&quot;), ISPICKVAL( DESS_IP_IPNS__c , &quot;Not Assigned&quot;)), OR(NOT(ISBLANK( DESS_IP_Assigned_Date__c )), NOT(ISBLANK( DESS_IP_Completed_Date__c )))),
	AND(ISPICKVAL( DESS_IP_IPNS__c , &quot;Assigned&quot;), OR(ISBLANK( DESS_IP_Assigned_Date__c ), NOT(ISBLANK( DESS_IP_Completed_Date__c )))),
	AND(ISPICKVAL( DESS_IP_IPNS__c , &quot;Completed&quot;), ISBLANK( DESS_IP_Assigned_Date__c ), ISBLANK( DESS_IP_Completed_Date__c )),
	AND(ISPICKVAL( DESS_IP_IPNS__c , &quot;Completed&quot;), OR(ISBLANK( DESS_IP_Completed_Date__c ), DESS_IP_Completed_Date__c &lt; DESS_IP_Assigned_Date__c))
  )</errorConditionFormula>
        <errorDisplayField>DESS_IP_IPNS__c</errorDisplayField>
        <errorMessage>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DESS_Lot_Management</fullName>
        <active>true</active>
        <description>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</description>
        <errorConditionFormula>OR(
 	AND( OR(ISPICKVAL( DESS_LM_Lot_Management__c , &quot;&quot;), ISPICKVAL( DESS_LM_Lot_Management__c , &quot;Not Assigned&quot;)), OR(NOT(ISBLANK( DESS_LM_Assigned_Date__c )), NOT(ISBLANK( DESS_LM_Completed_Date__c )))),
 	AND(ISPICKVAL( DESS_LM_Lot_Management__c , &quot;Assigned&quot;), OR(ISBLANK( DESS_LM_Assigned_Date__c ), NOT(ISBLANK( DESS_LM_Completed_Date__c )))),
 	AND(ISPICKVAL( DESS_LM_Lot_Management__c , &quot;Completed&quot;), ISBLANK( DESS_LM_Assigned_Date__c ), ISBLANK( DESS_LM_Completed_Date__c )),
 	AND(ISPICKVAL( DESS_LM_Lot_Management__c , &quot;Completed&quot;), OR(ISBLANK( DESS_LM_Completed_Date__c ), DESS_LM_Completed_Date__c &lt; DESS_LM_Assigned_Date__c))
  )</errorConditionFormula>
        <errorDisplayField>DESS_LM_Lot_Management__c</errorDisplayField>
        <errorMessage>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DESS_Networking_101</fullName>
        <active>true</active>
        <description>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</description>
        <errorConditionFormula>OR(
	AND( OR(ISPICKVAL( DESS_NW_Nertworking_101__c , &quot;&quot;), ISPICKVAL( DESS_NW_Nertworking_101__c , &quot;Not Assigned&quot;)), OR(NOT(ISBLANK( DESS_NW_Assigned_Date__c )), NOT(ISBLANK( DESS_NW_Completed_Date__c )))),
	AND(ISPICKVAL( DESS_NW_Nertworking_101__c , &quot;Assigned&quot;), OR(ISBLANK( DESS_NW_Assigned_Date__c ), NOT(ISBLANK( DESS_NW_Completed_Date__c )))),
	AND(ISPICKVAL( DESS_NW_Nertworking_101__c , &quot;Completed&quot;), ISBLANK( DESS_NW_Assigned_Date__c ), ISBLANK( DESS_NW_Completed_Date__c )),
	AND(ISPICKVAL( DESS_NW_Nertworking_101__c , &quot;Completed&quot;), OR(ISBLANK( DESS_NW_Completed_Date__c ), DESS_NW_Completed_Date__c &lt; DESS_NW_Assigned_Date__c))
  )</errorConditionFormula>
        <errorDisplayField>DESS_NW_Nertworking_101__c</errorDisplayField>
        <errorMessage>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DESS_ServiceEdge</fullName>
        <active>true</active>
        <description>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</description>
        <errorConditionFormula>OR(
 	AND( OR(ISPICKVAL( DESS_SE_ServiceEdge__c , &quot;&quot;), ISPICKVAL( DESS_SE_ServiceEdge__c , &quot;Not Assigned&quot;)), OR(NOT(ISBLANK( DESS_SE_Assigned_Date__c )), NOT(ISBLANK( DESS_SE_Completed_Date__c )))),
 	AND(ISPICKVAL( DESS_SE_ServiceEdge__c , &quot;Assigned&quot;), OR(ISBLANK( DESS_SE_Assigned_Date__c ), NOT(ISBLANK( DESS_SE_Completed_Date__c )))),
 	AND(ISPICKVAL( DESS_SE_ServiceEdge__c , &quot;Completed&quot;), ISBLANK( DESS_SE_Assigned_Date__c ), ISBLANK( DESS_SE_Completed_Date__c )),
 	AND(ISPICKVAL( DESS_SE_ServiceEdge__c , &quot;Completed&quot;), OR(ISBLANK( DESS_SE_Completed_Date__c ), DESS_SE_Completed_Date__c &lt; DESS_SE_Assigned_Date__c))
  )</errorConditionFormula>
        <errorDisplayField>DESS_SE_ServiceEdge__c</errorDisplayField>
        <errorMessage>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DESS_Wireless_Solutions</fullName>
        <active>true</active>
        <description>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</description>
        <errorConditionFormula>OR(
 	AND( OR(ISPICKVAL( DESS_WS_Wireless_Solutions__c , &quot;&quot;), ISPICKVAL( DESS_WS_Wireless_Solutions__c , &quot;Not Assigned&quot;)), OR(NOT(ISBLANK( DESS_WS_Assigned_Date__c )), NOT(ISBLANK( DESS_WS_Completed_Date__c )))),
 	AND(ISPICKVAL( DESS_WS_Wireless_Solutions__c , &quot;Assigned&quot;), OR(ISBLANK( DESS_WS_Assigned_Date__c ), NOT(ISBLANK( DESS_WS_Completed_Date__c )))),
 	AND(ISPICKVAL( DESS_WS_Wireless_Solutions__c , &quot;Completed&quot;), ISBLANK( DESS_WS_Assigned_Date__c ), ISBLANK( DESS_WS_Completed_Date__c )),
 	AND(ISPICKVAL( DESS_WS_Wireless_Solutions__c , &quot;Completed&quot;), OR(ISBLANK( DESS_WS_Completed_Date__c ), DESS_WS_Completed_Date__c &lt; DESS_WS_Assigned_Date__c))
  )</errorConditionFormula>
        <errorDisplayField>DESS_WS_Wireless_Solutions__c</errorDisplayField>
        <errorMessage>If Status = NULL or &apos;Not Assigned&apos;, No Date can be set.
If Status = &apos;Assigned&apos;, &apos;Assigned Date&apos; cannot be left blank. 
If Status = &apos;Completed&apos;, &apos;Assigned Date&apos; and &apos;Completed Date&apos; both required and Completed Date should be &gt;= Assigned Date</errorMessage>
    </validationRules>
</CustomObject>